Update Common to the newest version. Add download page to count how much software is downloaded.

--- a/longueur/Software/index.html
+++ b/longueur/Software/index.html
@@ -1,10 +1,10 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>longueur.org >> Software</title>
 <style type="text/css">
 	@import "styles.css";
 </style>
-<script javascript="javascript/text">
+<script language="javascript" type="text/javascript">
 	function toggleChangeLog(app) 
 	{
 		if (document.getElementById('changeLog_' + app).style.display == 'none') 
@@ -48,6 +48,9 @@
 		<div class="itemHeader">		
 			<a name="ps">ps 0.4.1.0</a>
 		</div>
+		
+		<a href="download.aspx?file=/WinTail/WinTail_0.2.zip">dl</a>
+		<a href="download.aspx?file=/WinTail/WinTail_0.8.zip">dl_blob</a>
 
 		<!-- <div class="itemImage">
 			<img src="images/ps.jpg" class="itemImageBorder">
@@ -112,7 +115,7 @@
 		</div>
 
 		<div class="itemImage">
-			<img src="images/geektool.jpg" class="itemImageBorder">
+			<img src="images/geektool.jpg" class="itemImageBorder" alt="GeekTool" />
 		</div>
 
 		<div class="itemContent">
@@ -190,7 +193,7 @@
 		</div>
 
 		<div class="itemImage">
-			<img src="images/wintail.jpg" class="itemImageBorder">
+			<img src="images/wintail.jpg" class="itemImageBorder" alt="WinTail" />
 		</div>
 
 		<div class="itemContent">
@@ -230,7 +233,7 @@
 		</div>
 
 		<div class="itemImage">
-			<img src="images/bugzapper.jpg" class="itemImageBorder">
+			<img src="images/bugzapper.jpg" class="itemImageBorder" alt="BugZapper" />
 		</div>
 
 		<div class="itemContent">
