--- a/longueur/Software/index.html
+++ b/longueur/Software/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 	<div class="title">
-		Software
+		longueur.org >> Software
 	</div>
 
 	<div class="item">
@@ -46,7 +46,7 @@
 
 	<div class="item">
 		<div class="itemHeader">		
-			<a name="ps">ps 0.4.1.0</a>
+			<a name="ps" id="name">ps 0.4.1.0</a>
 		</div>
 		
 		<a href="download.aspx?file=/WinTail/WinTail_0.2.zip">dl</a>
@@ -111,7 +111,7 @@
 
 	<div class="item">
 		<div class="itemHeader">		
-			<a name="geektool">GeekTool 0.5.2</a>
+			<a name="geektool" id="geektool">GeekTool 0.5.2</a>
 		</div>
 
 		<div class="itemImage">
@@ -189,7 +189,7 @@
 
 	<div class="item">
 		<div class="itemHeader">		
-			<a name="wintail">WinTail 0.2</a>
+			<a name="wintail" id="wintail">WinTail 0.2</a>
 		</div>
 
 		<div class="itemImage">
@@ -229,7 +229,7 @@
 
 	<div class="item">
 		<div class="itemHeader">		
-			<a name="bugzapper">BugZapper 0.5</a>
+			<a name="bugzapper" id="bugzapper">BugZapper 0.5</a>
 		</div>
 
 		<div class="itemImage">
@@ -285,7 +285,7 @@
 
 	<div class="item">
 		<div class="itemHeader">		
-			<a name="common">Common 0.4.2</a>
+			<a name="common" id="common">Common 0.4.2</a>
 		</div>
 
 		<div class="itemContent">
