Update the download page to specify the correct ContentType and filename. Update the web.config to specify the live database. Update the links on the software page to point to the download page so I can track them.

--- a/longueur/Software/index.html
+++ b/longueur/Software/index.html
@@ -48,9 +48,6 @@
 		<div class="itemHeader">		
 			<a name="ps" id="name">ps 0.4.1.0</a>
 		</div>
-		
-		<a href="download.aspx?file=/WinTail/WinTail_0.2.zip">dl</a>
-		<a href="download.aspx?file=/WinTail/WinTail_0.8.zip">dl_blob</a>
 
 		<!-- <div class="itemImage">
 			<img src="images/ps.jpg" class="itemImageBorder">
@@ -72,7 +69,7 @@
 			<br />
 			<br />
 
-			Download the latest <a href="ps/ps_bin_0.4.1.0.zip">executable</a> and/or the <a href="ps/ps_src_0.4.1.0.zip">source</a> to see what is going on.
+			Download the latest <a href="download.aspx?file=/ps/ps_bin_0.4.1.0.zip">executable</a> and/or the <a href="download.aspx?file=/ps/ps_src_0.4.1.0.zip">source</a> to see what is going on.
 			<br />
 			<br />
 
@@ -139,7 +136,7 @@
 			<br />
 			<br />
 
-			Download the latest <a href="geektool/geektool_bin_0.5.2.zip">executable</a> and/or the <a href="geektool/geektool_src_0.5.2.zip">source</a> to see what is going on.
+			Download the latest <a href="download.aspx?file=/geektool/geektool_bin_0.5.2.zip">executable</a> and/or the <a href="download.aspx?file=/geektool/geektool_src_0.5.2.zip">source</a> to see what is going on.
 			<br />
 			<br />
 
@@ -245,7 +242,7 @@
 			<br />
 			<br />
 
-			Download the latest <a href="bugzapper/bugzapper_bin_0.5.zip">executable</a> and/or the <a href="bugzapper/bugzapper_src_0.5.zip">source</a> to see what is going on.
+			Download the latest <a href="download.aspx?file=/bugzapper/bugzapper_bin_0.5.zip">executable</a> and/or the <a href="download.aspx?file=/bugzapper/bugzapper_src_0.5.zip">source</a> to see what is going on.
 			<br />
 			<br />
 
@@ -293,7 +290,7 @@
 			<br />
 			<br />
 
-			Download the latest <a href="common/common_src_0.4.2.zip">source</a>.
+			Download the latest <a href="download.aspx?file=/common/common_src_0.4.2.zip">source</a>.
 			<br />
 			<br />
 
