Disable Google Analytics until the files are pushed live. Add minimal.css theme.

--- a/longueur/TheHillellis/index.html
+++ b/longueur/TheHillellis/index.html
@@ -5,7 +5,7 @@
 	</script>
 	<script type="text/javascript">
 		_uacct = "UA-247760-1";
-		urchinTracker();
+		//urchinTracker();
 	</script>  
 
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
