--- a/longueur/default.html
+++ b/longueur/default.html
@@ -4,7 +4,7 @@
 </script>
 <script type="text/javascript">
 _uacct = "UA-247760-1";
-urchinTracker();
+//urchinTracker();
 </script>
 </head>
 <body>
