--- a/longueur/default.html
+++ b/longueur/default.html
@@ -1,19 +1,46 @@
 <html>
 <head>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-247760-1";
-//urchinTracker();
-</script>
+	<title>longueur.org</title>
+	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+	</script>
+	<script type="text/javascript">
+		_uacct = "UA-247760-1";
+		//urchinTracker();
+	</script>
+	<script type="text/javascript" language="javascript">
+		function showDescription(text) {
+			document.getElementById('description').innerHTML = text;
+		}
+	</script>
+	<link href="styles.css" media="all" rel="Stylesheet" type="text/css" />
 </head>
 <body>
-longueur.org
-<br />
-<br />
 
-<a href="Software/">Software</a><br />
-<a href="TheHillellis/">The Hillellis</a><br />
-<a href="IndieLyrics/">IndieLyrics</a>
+
+<div id="container">
+<div id="title">
+	longueur.org
+</div>
+	<div id="links">
+		<a href="photos/Default.aspx" 
+			onmouseover="javascript:showDescription('Various pictures that I have taken.');" 
+			onmouseout="javascript:showDescription('');">Photos</a>
+		<br />
+		<a href="Software/index.html" 
+			onmouseover="javascript:showDescription('Misc utility programs written in C#.');" 
+			onmouseout="javascript:showDescription('');">Software</a>
+		<br />
+		<a href="TheHillellis/Default.aspx"
+			onmouseover="javascript:showDescription('The adventures of Lynn and Adam.');" 
+			onmouseout="javascript:showDescription('');">The Hillellis</a>
+		<br />
+		<a href="IndieLyrics/"
+			onmouseover="javascript:showDescription('');" 
+			onmouseout="javascript:showDescription('');">IndieLyrics</a>
+	</div>
+
+	<div id="description" />
+</div>
+
 </body>
 </html>
