Add about page.

--- a/longueur/default.html
+++ b/longueur/default.html
@@ -37,6 +37,11 @@
 		<a href="IndieLyrics/"
 			onmouseover="javascript:showDescription('');" 
 			onmouseout="javascript:showDescription('');">IndieLyrics</a>
+		<br />
+		<br />
+		<a href="about.html"
+			onmouseover="javascript:showDescription('About me and this website.');" 
+			onmouseout="javascript:showDescription('');">About</a>
 	</div>
 
 	<div id="description" />
